Overflow x of main page textarea resizing is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
+        overflow-x: hidden;
 }
 /* styling menu icon */
 .nav-menu{
@@ -46,6 +47,7 @@ body{
 .home{
     background: linear-gradient(33deg, rgba(242,242,255,1) 0%, rgba(235,249,255,1) 100%);
     padding: 30px 0px 10px 0px;
+
 }
 .home h2{
     font-size: 3rem;
@@ -325,7 +327,11 @@ body{
     padding: 10px 10px;
     width: 80%;
 }
-
+.contact-form textarea
+{
+    max-width: 500px;
+    resize: none;
+}
 /* footer section starts */
 footer{
     background-color: #211e39;
